# tecuzzor

analyzer/: Readme.md  analyzer.py  kernel.py  kernel.txt  middleware.py  read_raw.txt  test.txt  test1.txt
pcad/: Makefile  README.md  detect.c  detect.sh  evict.c  evict_demo.c  victim.c  (+2 more)
syscall-fuzzer-K/: .gitignore  .gitmodules  Cargo.toml  Makefile  driver.c  pipeline.sh  test1.txt
syscall-fuzzer-K/analyzer/: .gitignore  README  analyzer.py  kernel.py  middle.py  write_kernel.txt  write_user.txt
syscall-fuzzer-K/fuzzer_types/: Cargo.toml
syscall-fuzzer-K/fuzzer_types/src/: calls.rs  lib.rs  types.rs
syscall-fuzzer-K/fuzzer_types/src/calls/: aux.rs  fs.rs  mem.rs  net.rs  synchro.rs  time.rs
syscall-fuzzer-K/fuzzer_types/src/types/: fs.rs  mem.rs  net.rs  synchro.rs  time.rs
syscall-fuzzer-K/src/: lang.rs  lib.rs  types.rs  utils.rs
syscall-fuzzer-K/src/calls/: aux.rs  fs.rs  mem.rs  mod.rs  net.rs  time.rs
syscall-fuzzer-K/std/: Cargo.toml
syscall-fuzzer-K/std/src/: io.rs  lib.rs  macros.rs
syscall-fuzzer-K/std/src/os/: kernel.rs  mod.rs  raw.rs
syscall-fuzzer-K/test/: access  access.c  brk  brk.c  fileio  fileio.c  filestat  filestat.c  fstat  fstat.c  getpid  getpid.c  getsockopt  getsockopt.c  lstat  lstat.c  make.sh  memadvance  memadvance.c  mmap_munmap  mmap_munmap.c  mprotect  mprotect.c  nanosleep  nanosleep.c  open_read_write_close  open_read_write_close.c  pipe  pipe.c  pipe2  pipe2.c  poll  poll.c  pread  pread.c  pread64  pread64.c  pwrite  pwrite.c  pwrite64  (+7 more)
syscall-fuzzer-K/test/client-server/: client  client.c  server  server.c
syscall-fuzzer-U/: Cargo.toml  LICENSE  README.md  test1.txt
syscall-fuzzer-U/analyzer/: stage1.ipynb
syscall-fuzzer-U/analyzer/.ipynb_checkpoints/: stage1-checkpoint.py
syscall-fuzzer-U/ctests/: test  test.c
syscall-fuzzer-U/dec_macro/: Cargo.toml
syscall-fuzzer-U/dec_macro/src/: lib.rs
syscall-fuzzer-U/fuzzer_macro/: Cargo.toml
syscall-fuzzer-U/fuzzer_macro/src/: lib.rs
syscall-fuzzer-U/fuzzer_types/: Cargo.toml
syscall-fuzzer-U/fuzzer_types/src/: calls.rs  lib.rs  types.rs  utils.rs
syscall-fuzzer-U/fuzzer_types/src/calls/: aux.rs  fs.rs  mem.rs  net.rs  synchro.rs  time.rs
syscall-fuzzer-U/fuzzer_types/src/types/: fs.rs  mem.rs  net.rs  stdimpl.rs  synchro.rs  time.rs
syscall-fuzzer-U/src/: auxillary.rs  fs.rs  lib.rs  main.rs  memory.rs  net.rs  randomFuzzer.rs  syncro.rs  time.rs
(+16 files in other folders)
