[package]
name = "fuzzer_types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
type_only = []

[dependencies]
libc = { path = "../libc" }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
