[package]
name = "fuzzer_macro"
version = "0.1.0"
authors = ["ya0guang <hbchen001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
syscalls = "0.3.2"